--- a/app/src/main/res/layout/activity_finance_register.xml
+++ b/app/src/main/res/layout/activity_finance_register.xml
@@ -30,10 +30,10 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/first_name"
+        android:id="@+id/financename"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter your first name"
+        android:hint="Enter your Finance name"
         android:padding="14dp"
         android:background="@drawable/input_field_shadow"
         android:elevation="5dp"
@@ -44,14 +44,14 @@
         android:layout_marginTop="24dp" />
 
     <EditText
-        android:id="@+id/last_name"
+        android:id="@+id/Full_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter your last name"
+        android:hint="Enter your Full name"
         android:padding="14dp"
         android:background="@drawable/input_field_shadow"
         android:elevation="3dp"
-        app:layout_constraintTop_toBottomOf="@id/first_name"
+        app:layout_constraintTop_toBottomOf="@id/financename"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
@@ -66,7 +66,7 @@
         android:padding="14dp"
         android:background="@drawable/input_field_shadow"
         android:elevation="3dp"
-        app:layout_constraintTop_toBottomOf="@id/last_name"
+        app:layout_constraintTop_toBottomOf="@id/Full_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
