--- a/app/src/main/res/layout/activity_finance_register.xml
+++ b/app/src/main/res/layout/activity_finance_register.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="24dp" />
 
     <EditText
-        android:id="@+id/Full_name"
+        android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter your Full name"
@@ -66,7 +66,7 @@
         android:padding="14dp"
         android:background="@drawable/input_field_shadow"
         android:elevation="3dp"
-        app:layout_constraintTop_toBottomOf="@id/Full_name"
+        app:layout_constraintTop_toBottomOf="@id/username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
